--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ueih Casio - Red Phoenix</title>
+  <title>Ueih Casio</title>
   <script>
     // prevent theme flash
     (function(){
@@ -523,7 +523,7 @@
 
     // Default config
     let siteConfig = {
-      avatar: "https://i.pinimg.com/736x/8b/16/7a/8b167af653c2399dd93b952a48740620.jpg",
+      avatar: "https://scontent.fhan20-1.fna.fbcdn.net/v/t39.30808-6/555733813_810835077974194_4101748610057312325_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHDTdYqWdNFRjU8d2r5jAhjebOdWmQ9kbF5s51aZD2RsVt3gAla-o2NSldRE2u4LlyamgEm9bbvjTd0fQAskB83&_nc_ohc=j7pYsq1YFBIQ7kNvwGqVswS&_nc_oc=Adlz2s1APpaob9-hqj_UUypHn8eLkWbC-8zRqetZZ8lreC3w1g2GCzKFBPN2XtBmeX0&_nc_zt=23&_nc_ht=scontent.fhan20-1.fna&_nc_gid=kLhRTL2MoYzPK4ngUv-7zA&oh=00_AflDQh0Z0RhjS2cSJvz5BRhWHcCxjtV7wKug-AHH5fEuuA&oe=6958839A",
       logoText: "Ueih Casio",
       slogan: "Casio Lẹ Lẹ Rồi Chuyển Câu Thoi🐣",
       social: {
